assets/cloudformation/ood.yml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0
---
AWSTemplateFormatVersion: 2010-09-09
Description: OpenOnDemand on AWS
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Portal
        Parameters:
          - WebsiteDomainName
          - PortalAllowedIPCIDR
      - Label:
          default: Route53
        Parameters:
          - HostedZoneId
      - Label:
          default: Networking
        Parameters:
          - VPC
          - PublicSubnets
          - PrivateSubnets
          - PCSClusterSecurityGroup
      - Label:
          default: Active Directory
        Parameters:
          - ADAdministratorSecret
          - TopLevelDomain
          - DomainName
          - LDAPNLBEndPoint
      - Label:
          default: Storage
        Parameters:
          - EFSFileSystemId
          - EFSFileSystemArn
          - RetainEFSFileSystem
          - LoadBalancerLogBucket
      - Label:
          default: Slurm Configurations
        Parameters:
          - SlurmAccountingDBSecret
          - SlurmAccountingDBSecurityGroup
          - SlurmAccountingDBSecretPassword
          - MungeKeySecretArn
          - SlurmVersion
      - Label:
          default: Open OnDemand
        Parameters:
          - Branch
    ParameterLabels:
      PortalAllowedIPCIDR:
        default: Portal Allowed IP CIDR
      WebsiteDomainName:
        default: Website Domain Name
      HostedZoneId:
        default: Hosted Zone Id

#######################
#     Parameters      #
#######################

Parameters:
  DomainName:
    Description: Domain name not including the top level domain
    Default: hpclab
    Type: String
    AllowedPattern: '[a-zA-Z0-9]+'
  TopLevelDomain:
    Description: TLD for your domain (i.e. local, com, etc)
    Type: String
    MinLength: '1'
    MaxLength: '15'
    Default: local
    AllowedPattern: '[a-zA-Z0-9]+'
  WebsiteDomainName:
    Description: (Optional) Domain name for world facing website. If not provided, Route53 resources will not be created.
    Type: String
    Default: ""
  HostedZoneId:
    Description: (Required if WebsiteDomainName is provided) Hosted Zone Id for Route53 Domain
    Type: String
    Default: ""
  PortalAllowedIPCIDR:
    Description: IP CIDR for access to the Portal
    Default: 0.0.0.0/0
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid CIDR range of the form x.x.x.x/x.
  VPC:
    Description: VPC to deploy the portal
    Type: AWS::EC2::VPC::Id
    ConstraintDescription: must be a valid VPC Id
  PublicSubnets:
    Description: Public subnets
    Type: List<AWS::EC2::Subnet::Id>
  PrivateSubnets:
    Description: Private subnets
    Type: List<AWS::EC2::Subnet::Id>
  PCSClusterSecurityGroup:
    Description: (Optional) PCS Cluster Security Group
    Type: String
  ADAdministratorSecret:
    Description: AD Admin Secret ARN
    Type: String
    AllowedPattern: '^(?:arn:aws:secretsmanager:[a-z0-9-]+:[0-9]{12}:secret:[A-Za-z0-9\-\_\+\=\/\.\@]{1,519})?$'
  LDAPNLBEndPoint:
    Description: LDAP NLB End Point
    Type: String
  LoadBalancerLogBucket:
    Description: S3 Bucket to store Load Balancer logs
    Type: String
    AllowedPattern: '[a-z0-9.-]*'
  EFSFileSystemId:
    Description: (Optional) EFS Filesystem Id to mount.  If left blank a file system will be created.
    Type: String
  EFSFileSystemArn:
    Description: (Required if EFSFileSystemId populated) EFS Filesystem Arn.  If left blank a file system will be created.
    Type: String
  RetainEFSFileSystem:
    Description: Retain EFS Filesystem.  If a file system is not provided, this will have no affect
    Type: String
    Default: "False"
    AllowedValues:
         - "True"
         - "False"
  SlurmAccountingDBSecret:
    Description: (Optional) Slurm Accounting DB Secret ARN.
    Type: String
  SlurmAccountingDBSecretPassword:
    Description: (Optional) Slurm Accounting DB Secret Password.
    Type: String
  SlurmAccountingDBSecurityGroup:
    Description: (Optional) Slurm Accounting DB Security Group.
    Type: String
  MungeKeySecretArn:
    Description: (Optional) Munge Key Secret ARN.  If left blank a munge key will be created.
    Type: String
  Branch:
    Description: Branch of the code to deploy. Only use this when testing changes to the solution
    Default: main
    Type: String
  SlurmVersion:
    Description: Select the verion of slurm to install
    Type: String
    AllowedValues:
      - "25.05.5" # PCS
      - "25.11.6" # PCluster 3.16.0 / PCS
    Default: "25.11.6"

#######################
#     Conditions      #
#######################

Conditions:
  CreateEFSFileSystem: !Equals [!Ref 'EFSFileSystemId', '']
  RetainStorage: !Equals [!Ref RetainEFSFileSystem, 'True']
  HasWebsiteDomain: !Not [!Equals [!Ref 'WebsiteDomainName', '']]
  UseHTTP: !Equals [!Ref 'WebsiteDomainName', '']
  UseSlurmAccountingDB: !Not [!Equals [!Ref 'SlurmAccountingDBSecret', '']]
  CreateMungeKey: !Equals [!Ref 'MungeKeySecretArn', '']
  HasPCSClusterSecurityGroup: !Not [!Equals [!Ref 'PCSClusterSecurityGroup', '']]

#######################
#     Reesources      #
#######################

Resources:
  OODCertificate:
    Type: AWS::CertificateManager::Certificate
    Condition: HasWebsiteDomain
    Properties:
      DomainName: !Ref WebsiteDomainName
      ValidationMethod: DNS
      DomainValidationOptions:
        - HostedZoneId: !Ref HostedZoneId
          DomainName: !Ref WebsiteDomainName

  #########################################################
  # Security Groups
  #########################################################

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for ALB
      SecurityGroupIngress:
        - CidrIp: !Ref PortalAllowedIPCIDR
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
          Description: HTTPS Access
        - !If
          - HasWebsiteDomain
          - !Ref AWS::NoValue
          - CidrIp: !Ref PortalAllowedIPCIDR
            FromPort: 80
            ToPort: 80
            IpProtocol: tcp
            Description: HTTP Access when no domain is provided
      SecurityGroupEgress:
        - Description: Remove default rule for egress
          CidrIp: 127.0.0.1/32
          IpProtocol: "-1"
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName} - ALB SecurityGroup'

  ALBSecurityGroupEgressHTTP:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      Description: HTTPS Outbound
      GroupId: !GetAtt ALBSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt PortalSecurityGroup.GroupId

  ALBSecurityGroupEgressHTTPS:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
      Description: HTTP outbound
      GroupId: !GetAtt ALBSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt PortalSecurityGroup.GroupId

  PortalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for OOD Portal Cluster
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref ALBSecurityGroup
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          Description: HTTP Access
        - SourceSecurityGroupId: !Ref ALBSecurityGroup
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
          Description: HTTPS Access
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          Description: Allow outbound 443 traffic to download packages
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          Description: Allow outbound 80 traffic to download packages
        - CidrIp: 10.0.0.0/16
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          Description: Allow outbound 22 traffic to Login Nodes
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName} - SecurityGroup'

  PortalHeadNodeAccountingIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 6817
      ToPort: 6820
      Description: Allows inbound from Head Nodes for Slurm Accounting
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt HeadNodeSecurityGroup.GroupId

  PortalHeadNodeAccountingEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 6817
      ToPort: 6820
      Description: Allows outbound to Head Nodes for Slurm Accounting
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt HeadNodeSecurityGroup.GroupId

  PortalHeadNodeEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 389
      ToPort: 389
      Description: Allows outbound from portal to LDAP in VPC CIDR
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAPUDPEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: udp
      FromPort: 389
      ToPort: 389
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAPDNSEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 53
      ToPort: 53
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAP464Egress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 464
      ToPort: 464
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAPDNSUDPEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: udp
      FromPort: 53
      ToPort: 53
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAPPingUDPEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: udp
      FromPort: 88
      ToPort: 88
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeLDAPKerberosTCPEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 88
      ToPort: 88
      Description: Allows outbound from portal to LDAP
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalHeadNodeSSHEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      Description: Allows outbound to Head Nodes for SSH
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt HeadNodeSecurityGroup.GroupId

  PortalHeadNodeLoginNodeNLBEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      Description: Allows outbound from portal to NLB for Login Nodes
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      CidrIp: 10.0.0.0/16

  PortalComputeNodeEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      Description: Outbound to Compute Nodes for Interactive Apps
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt ComputeNodeSecurityGroup.GroupId

  HeadNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for PCluster HeadNode
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref PortalSecurityGroup
          FromPort: 6819
          ToPort: 6819
          IpProtocol: tcp
          Description: Slurm Accounting
        - SourceSecurityGroupId: !Ref PortalSecurityGroup
          FromPort: 6820
          ToPort: 6820
          IpProtocol: tcp
          Description: Slurm Accounting
      SecurityGroupEgress:
        - Description: Remove default rule for egress
          CidrIp: 127.0.0.1/32
          IpProtocol: "-1"
      VpcId: !Ref VPC

  ComputeNodeSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for PCluster ComputeNode
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref PortalSecurityGroup
          FromPort: 0
          ToPort: 65535
          IpProtocol: tcp
          Description: Portal rule for for Interactive Apps
      SecurityGroupEgress:
        - Description: Remove default rule for egress
          CidrIp: 127.0.0.1/32
          IpProtocol: "-1"
      VpcId: !Ref VPC

  OpenOnDemandSecrets:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: !Sub Secrets for Open On Demand Stack ${AWS::StackName}
      SecretString: !Join
        - ''
        - - '{'
          - !Sub '"TopLevelDomain": "${TopLevelDomain}",'
          - !Sub '"ClusterConfigBucket": "${ClusterConfigBucket}",'
          - !Sub '"DomainName": "${DomainName}"'
          - '}'
      KmsKeyId: alias/aws/secretsmanager

  OODInstanceManagedPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: secretsmanager:GetSecretValue
            Resource:
              - !Ref ADAdministratorSecret
              - !Ref OpenOnDemandSecrets
              - !If [ UseSlurmAccountingDB, !Ref SlurmAccountingDBSecret, !Ref AWS::NoValue ]
          - Effect: Allow
            Action:
              - secretsmanager:GetSecretValue
              - secretsmanager:PutSecretValue
            Resource:
              - !If [ CreateMungeKey, !Ref MungeKeySecret, !Ref MungeKeySecretArn ]
          - Effect: Allow
            Action:
              - s3:GetObject
              - s3:PutObject
              - s3:ListBucket
              - s3:DeleteObject
            Resource:
              - !GetAtt ClusterConfigBucket.Arn
              - !Sub ${ClusterConfigBucket.Arn}/*
          - Effect: Allow
            Action:
              - elasticfilesystem:ClientMount
              - elasticfilesystem:ClientWrite
              - elasticfilesystem:ClientRootAccess
            Resource:
              - !If [ CreateEFSFileSystem, !GetAtt SharedFileSystem.Arn, !Ref EFSFileSystemArn ]
          - Effect: Allow
            Action:
              - logs:DescribeLogGroups
              - logs:DescribeLogStreams
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
            Resource: !Sub arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:*
          - Effect: Allow
            Action:
              - ec2:DescribeTags
            Resource: "*"
          - Effect: Allow
            Action:
              - cloudformation:DescribeStacks
            Resource: !Sub arn:${AWS::Partition}:cloudformation:${AWS::Region}:${AWS::AccountId}:stack/*
          - Effect: Allow
            Sid: AllowAccessToPCSSecret
            Action:
              - secretsmanager:GetSecretValue
            Resource: !Sub arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:pcs!*
          - Effect: Allow
            Sid: AllowAccessToPCS
            Action:
              - pcs:GetCluster
            Resource: !Sub arn:${AWS::Partition}:pcs:${AWS::Region}:${AWS::AccountId}:cluster/*

  OODInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
        - !Sub arn:${AWS::Partition}:iam::aws:policy/CloudWatchAgentServerPolicy
        - !Ref OODInstanceManagedPolicy
      Policies:
        - PolicyName: PCSPolicy
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - pcs:GetCluster
                Resource: !Sub arn:${AWS::Partition}:pcs:${AWS::Region}:${AWS::AccountId}:cluster/*
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName} - OpenOnDemand IAM Role'

  OpenOnDemandInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref OODInstanceRole

  # Add a new secrets manager entry
  MungeKeySecret:
    Condition: CreateMungeKey
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Munge Key for Open OnDemand
      Name: !Sub [ "MungeKey-${StackIdSuffix}", { StackIdSuffix: !Select [ 1, !Split [ '/', !Ref 'AWS::StackId' ] ] } ]
      KmsKeyId: alias/aws/secretsmanager

  OpenOnDemandLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Metadata:
      AWS::CloudFormation::Init:
        configSets:
          config:
            - initsetup
            - config
            - setupInfrastructure
            - slurm
            - ood
        initsetup:
          commands:
            initsetupcmd:
              command: |
                dnf update -y -q
                #sed -i "/#\$nrconf{restart} = 'i';/s/.*/\$nrconf{restart} = 'a';/" /etc/needrestart/needrestart.conf
                touch /var/log/install.txt
        config:
          packages:
            yum:
              jq: []
              realmd: []
              sssd: []
              amazon-cloudwatch-agent: []
          commands:
            initial_setup:
              command: |
                groupadd spack-users -g 4000
            configure_cert:
              command: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts/configure_instance_cert.sh
          sources:
            /etc/ood-install: !Sub https://github.com/aws-samples/open-on-demand-on-aws/archive/refs/heads/${Branch}.zip
          files: # Creates a file with appropriate variables for use in scripts. No secrets in here
            /etc/ood-install/set_variables.sh:
              content: !Sub
                - |
                  export AD_SECRET_ID=${OpenOnDemandSecrets}
                  export AD_PASSWORD=${ADAdministratorSecret}
                  export AWS_REGION=${AWS::Region}
                  export DOMAIN_NAME=${DomainName}
                  export TOP_LEVEL_DOMAIN=${TopLevelDomain}
                  export RDS_SECRET_ID=${SlurmAccountingDBSecret}
                  export ALB_DNS_NAME=${ALB.DNSName}
                  export WEBSITE_DOMAIN=${WebsiteDomainName}
                  export LDAP_NLB=${LDAPNLBEndPoint}
                  export EFS_ID=${EFS_FileSystemId}
                  export CLUSTER_CONFIG_BUCKET=${ClusterConfigBucket}
                  export SLURM_VERSION=${SlurmVersion}
                  export MUNGEKEY_SECRET_ID=${MungeKeySecret}
                  export OOD_HTTP="${OOD_HTTP}"
                - EFS_FileSystemId: !If [ CreateEFSFileSystem, !Ref SharedFileSystem, !Ref EFSFileSystemId ]
                  WebsiteDomainName: !If [ HasWebsiteDomain, !Ref WebsiteDomainName, !GetAtt ALB.DNSName ]
                  MungeKeySecret: !If [ CreateMungeKey, !Ref MungeKeySecret, !Ref MungeKeySecretArn ]
                  OOD_HTTP: !If [ UseHTTP, "true", "false" ]
              mode: "000744"
              owner: "root"
              group: "root"
          users:
            slurm:
              uid: 401
            munge:
              uid: 402
        setupInfrastructure:
          commands:
            1_configure_cloudwatch:
              command: !Sub ./configure_cloudwatch_metrics.sh ${AWS::StackName}
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
            2_mount_efs:
              command: |
                . /etc/ood-install/set_variables.sh
                ./mount_efs.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
            3_configure_mkhomedir:
              command: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts/configure_mkhomedir.sh
            4_upload_pcluster_configs:
              command: |
                . /etc/ood-install/set_variables.sh
                ./upload_pcluster_configs.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
        slurm:
          commands:
            1_install_munge:
              command: |
                . /etc/ood-install/set_variables.sh
                ./install_munge.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
            2_install_slurm:
              command: |
                . /etc/ood-install/set_variables.sh
                ./install_slurm.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
        spack:
          commands:
            install_spack:
              command: ./install_spack.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
        ood:
          commands:
            ood_install:
              command: !Sub |
                . /etc/ood-install/set_variables.sh
                ./install_ood.sh
                aws s3 sync s3://${ClusterConfigBucket}/clusters /etc/ood/config/clusters.d/ --exact-timestamps
                ./configure_cluster_for_ood.sh
              cwd: !Sub /etc/ood-install/open-on-demand-on-aws-${Branch}/scripts
    Properties:
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template-cfn-init
      LaunchTemplateData:
        ImageId: '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64:75}}'
        # ImageId: 'ami-04e5276ebb8451442'
        InstanceType: m6i.large
        IamInstanceProfile:
          Name: !Ref OpenOnDemandInstanceProfile
        BlockDeviceMappings:
          - DeviceName: /dev/sda1
            Ebs:
              DeleteOnTermination: true
              Encrypted: true
              VolumeSize: 60
              VolumeType: gp3
        SecurityGroupIds:
          - !Ref PortalSecurityGroup
          - !Ref EfsClientSecurityGroup
          - !If
            - HasPCSClusterSecurityGroup
            - !Ref PCSClusterSecurityGroup
            - !Ref AWS::NoValue
        Monitoring:
          Enabled: true
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            set -o pipefail
            exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
            yum update -y aws-cfn-bootstrap

            # Signal failure to the ASG and exit
            function error_exit {
              echo "$1" 1>&2
              /opt/aws/bin/cfn-signal -e 1 --stack ${AWS::StackName} --resource OODServerASG --region ${AWS::Region}
              exit 1
            }

            # Call cfn-init script to install files and packages
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource OpenOnDemandLaunchTemplate --region ${AWS::Region} --configsets config || error_exit 'Failed to run cfn-init'

            # Signal the stack that the instance is ready
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource OODServerASG --region ${AWS::Region}
  OODServerASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: "1"
      MaxSize: "1"
      DesiredCapacity: "1"
      HealthCheckType: ELB
      HealthCheckGracePeriod: 900
      MetricsCollection:
        - Granularity: 1Minute
      LaunchTemplate:
        LaunchTemplateId: !Ref OpenOnDemandLaunchTemplate
        Version: !GetAtt OpenOnDemandLaunchTemplate.LatestVersionNumber
      VPCZoneIdentifier: !Ref PrivateSubnets
      TargetGroupARNs:
        - !If [ HasWebsiteDomain, !Ref OpenOnDemandTargetGroupHTTPS, !Ref OpenOnDemandTargetGroupHTTP ]
      Tags:
        - Key: Name
          Value: !Sub OpenOnDemand Portal - ${AWS::StackName}-cfn-init
          PropagateAtLaunch: true
        - Key: ood
          Value: !Sub webportal-${AWS::StackName}
          PropagateAtLaunch: true
    CreationPolicy:
      ResourceSignal:
        Timeout: PT20M
    UpdatePolicy:
      AutoScalingRollingUpdate:
        PauseTime: PT20M
        WaitOnResourceSignals: true

  #########################################################
  # Shared File System
  #########################################################

  SharedFileSystem:
    Condition: CreateEFSFileSystem
    Type: AWS::EFS::FileSystem
    DeletionPolicy: !If [ RetainStorage, Retain, Delete ]
    UpdateReplacePolicy: !If [ RetainStorage, Retain, Delete ]
    Properties:
      FileSystemTags:
        - Key: Name
          Value: !Sub "${AWS::StackName}-efs"
      Encrypted: true
      PerformanceMode: generalPurpose
      BackupPolicy:
        Status: ENABLED

  MountTargetSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: 'Allows traffic to EFS filesystem'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !GetAtt PortalSecurityGroup.GroupId
          Description: Ingress Rule for OOD Portal
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !GetAtt HeadNodeSecurityGroup.GroupId
          Description: Ingress Rule for HeadNode
        - IpProtocol: tcp
          FromPort: 2049
          ToPort: 2049
          SourceSecurityGroupId: !GetAtt ComputeNodeSecurityGroup.GroupId
          Description: Ingress Rule for ComputeNode
      SecurityGroupEgress:
        - IpProtocol: tcp
          Description: Egress rule for HeadNode
          FromPort: 2049
          ToPort: 2049
          DestinationSecurityGroupId: !GetAtt HeadNodeSecurityGroup.GroupId
        - IpProtocol: tcp
          Description: Egress rule for ComputeNodeSecurityGroup
          FromPort: 2049
          ToPort: 2049
          DestinationSecurityGroupId: !GetAtt ComputeNodeSecurityGroup.GroupId

  # Clients join this group for access to the EFS file system
  EfsClientSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Clients join this group for access to EFS filesystem'
      GroupName: !Sub '${AWS::StackName}-efs-client-security-group'
      VpcId: !Ref VPC

  MountTargetSecurityGroupInboundRule:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      IpProtocol: tcp
      Description: Allow incoming traffic to EFS from members of security group
      FromPort: 2049
      ToPort: 2049
      GroupId: !Ref MountTargetSecurityGroup
      SourceSecurityGroupId: !Ref EfsClientSecurityGroup

  EfsClientSecurityGroupOutboundRule:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      IpProtocol: tcp
      Description: Allow outgoing traffic from members of security group to EFS
      FromPort: 2049
      ToPort: 2049
      GroupId: !Ref EfsClientSecurityGroup
      DestinationSecurityGroupId: !Ref MountTargetSecurityGroup

  ComputeNodeMountTargetOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      Description: Allows outbound to EFS mount target
      GroupId: !GetAtt ComputeNodeSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId

  HeadNodeMountTargetOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      Description: Allows outbound to EFS mount target
      GroupId: !GetAtt HeadNodeSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId

  PortalMountTargetOutboundRule:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      Description: Allows outbound to EFS mount target
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt EfsClientSecurityGroup.GroupId

  MountTargetResource1:
    Type: AWS::EFS::MountTarget
    Condition: CreateEFSFileSystem
    Properties:
      FileSystemId: !GetAtt SharedFileSystem.Arn
      SubnetId: !Select [0, !Ref PrivateSubnets]
      SecurityGroups:
        - !Ref MountTargetSecurityGroup

  MountTargetResource2:
    Type: AWS::EFS::MountTarget
    Condition: CreateEFSFileSystem
    Properties:
      FileSystemId: !GetAtt SharedFileSystem.Arn
      SubnetId: !Select [1, !Ref PrivateSubnets]
      SecurityGroups:
        - !Ref MountTargetSecurityGroup

  #########################################################
  # Load Balancer
  #########################################################

  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: ipv4
      Scheme: internet-facing
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets: !Ref PublicSubnets
      Type: application
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
        - Key: deletion_protection.enabled # Required to address issue with OOD SSH timeout
          Value: true
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Ref LoadBalancerLogBucket
        - Key: access_logs.s3.prefix
          Value: portal-alb
        - Key: idle_timeout.timeout_seconds # Required to address issue with OOD SSH timeout
          Value: 600


  OpenOnDemandTargetGroupHTTPS:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 6
      HealthCheckTimeoutSeconds: 5
      TargetType: instance
      Protocol: HTTPS
      Port: 443
      VpcId: !Ref VPC
      Matcher:
        HttpCode: 301

  OpenOnDemandTargetGroupHTTP:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: UseHTTP
    Properties:
      HealthCheckEnabled: true
      HealthCheckIntervalSeconds: 6
      HealthCheckTimeoutSeconds: 5
      TargetType: instance
      Protocol: HTTP
      Port: 80
      VpcId: !Ref VPC
      Matcher:
        HttpCode: 301

  OpenOnDemandListenerHTTPS:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: HasWebsiteDomain
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref OpenOnDemandTargetGroupHTTPS
      LoadBalancerArn: !Ref ALB
      Certificates:
        - CertificateArn: !Ref OODCertificate
      Port: 443
      Protocol: "HTTPS"
      SslPolicy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06

  OpenOnDemandListenerHTTP:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: UseHTTP
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref OpenOnDemandTargetGroupHTTP
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: "HTTP"

  ClusterConfigBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - BucketKeyEnabled: true
            ServerSideEncryptionByDefault:
              SSEAlgorithm: aws:kms
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled
      NotificationConfiguration:
        EventBridgeConfiguration:
          EventBridgeEnabled: true
      ObjectLockEnabled: false


  ClusterConfigBucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref ClusterConfigBucket
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: ForceSSLRequests
            Action:
              - 's3:*'
            Effect: Deny
            Resource:
              - !Sub arn:${AWS::Partition}:s3:::${ClusterConfigBucket}
              - !Sub arn:${AWS::Partition}:s3:::${ClusterConfigBucket}/*
            Principal: '*'
            Condition:
              Bool:
                'aws:SecureTransport': "false"

  EventBridgeRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - events.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - !Ref EventBridgeManagedPolicy

  EventBridgeManagedPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow # Allows execution of RunShellScript doc
            Action:
              - ssm:SendCommand
            Resource: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript

  #########################################################
  # Event Bridge Rules
  #########################################################

  ClusterConfigUpload:
    Type: AWS::Events::Rule
    Properties:
      Description: Copy config files to OOD instance when an object is uploaded
      State: "ENABLED"
      EventPattern:
        source:
          - "aws.s3"
        detail-type:
          - "Object Created"
        detail:
          bucket:
            name:
              - !Ref ClusterConfigBucket
          object:
            key:
              - wildcard: "clusters/*"
      Targets:
        - Id: RunShell
          Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
          RoleArn: !GetAtt EventBridgeRole.Arn
          Input: !Sub |
           {
            "commands": [
              "aws s3 sync s3://${ClusterConfigBucket}/clusters /etc/ood/config/clusters.d/ --exact-timestamps",
              "/etc/ood-install/open-on-demand-on-aws-${Branch}/scripts/configure_cluster_for_ood.sh"
            ]
           }
          RunCommandParameters:
            RunCommandTargets:
              - Key: tag:ood
                Values:
                  - !Sub webportal-${AWS::StackName}

  PClusterCloudformationDeleted:
    Type: AWS::Events::Rule
    Properties:
      Description: Remove config files from OOD instance when pcluster removes a stack
      State: "ENABLED"
      EventPattern:
        detail:
          eventName:
            - "DeleteStack"
          eventSource:
            - "cloudformation.amazonaws.com"
      Targets:
        - Id: RunShell
          Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
          RoleArn: !GetAtt EventBridgeRole.Arn
          InputTransformer:
            InputPathsMap:
              stackName: $.detail.requestParameters.stackName
            InputTemplate: !Sub |
              {
                "commands": [
                    "stackName=<stackName>",
                    "if [[ $stackName == *:cloudformation:* ]]; then",
                    " IFS='/ ' read -r -a array <<< $stackName",
                    " stackName=${!array[1]}",
                    "fi",
                    "tags=$(aws cloudformation describe-stacks --stack-name $stackName --region ${AWS::Region} --query \"Stacks[0].Tags[?Key=='parallelcluster:version']\" --output text)",
                    "if [ ! -z \"$tags\" ]; then",
                    " aws s3 rm s3://${ClusterConfigBucket}/clusters/$stackName.yml",
                    " rm /etc/ood/config/clusters.d/$stackName.yml",
                    " rm /etc/ood/config/apps/bc_desktop/$stackName.yml",
                    " rm /etc/ssh/ssh_config.d/ood_$stackName.conf",
                    " sacctmgr remove cluster $stackName -i",
                    "fi"
                  ]
              }
          RunCommandParameters:
            RunCommandTargets:
              - Key: tag:ood
                Values:
                  - !Sub webportal-${AWS::StackName}

  SlurmConfigRule:
    Type: AWS::Events::Rule
    Properties:
      Description: Copy slurm config files to OOD instance when an object is uploaded
      State: "ENABLED"
      EventPattern:
        source:
          - "aws.s3"
        detail-type:
          - "Object Created"
        detail:
          bucket:
            name:
              - !Ref ClusterConfigBucket
          object:
            key:
              - wildcard: "slurm/*"
      Targets:
        - Id: RunShell
          Arn: !Sub arn:${AWS::Partition}:ssm:${AWS::Region}::document/AWS-RunShellScript
          RoleArn: !GetAtt EventBridgeRole.Arn
          Input: !Sub |
           {
            "commands": [
              "aws s3 sync s3://${ClusterConfigBucket}/slurm /etc/slurm/",
              "/etc/ood-install/open-on-demand-on-aws-${Branch}/scripts/configure_slurm.sh"
            ]
           }
          RunCommandParameters:
            RunCommandTargets:
              - Key: tag:ood
                Values:
                  - !Sub webportal-${AWS::StackName}

  DNSRecord:
    Type: AWS::Route53::RecordSet
    Condition: HasWebsiteDomain
    Properties:
      HostedZoneId: !Ref HostedZoneId
      Name: !Ref WebsiteDomainName
      AliasTarget:
        DNSName: !GetAtt ALB.DNSName
        HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID
      Type: A

  #########################################################
  # Database Security Groups
  #########################################################

  DatabaseSecurityGroupIngressOOD:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseSlurmAccountingDB
    Properties:
      IpProtocol: tcp
      GroupId: !Ref SlurmAccountingDBSecurityGroup
      SourceSecurityGroupId: !Ref PortalSecurityGroup
      FromPort: 3306
      ToPort: 3306
      Description: Allow database ingress from OOD instance

  DatabaseSecurityGroupIngressHeadNode:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: UseSlurmAccountingDB
    Properties:
      IpProtocol: tcp
      GroupId: !Ref SlurmAccountingDBSecurityGroup
      SourceSecurityGroupId: !Ref HeadNodeSecurityGroup
      FromPort: 3306
      ToPort: 3306
      Description: Allow database ingress from ParallelCluster HeadNode instance

  HeadNodeDBEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseSlurmAccountingDB
    Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      Description: Allows outbound to DB
      GroupId: !GetAtt HeadNodeSecurityGroup.GroupId
      DestinationSecurityGroupId: !Ref SlurmAccountingDBSecurityGroup

  PortalDBEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: UseSlurmAccountingDB
    Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      Description: Allows outbound to DB
      GroupId: !GetAtt PortalSecurityGroup.GroupId
      DestinationSecurityGroupId: !Ref SlurmAccountingDBSecurityGroup

  HeadNodeParallelClusterIAMPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - secretsmanager:GetSecretValue
              - secretsmanager:DescribeSecret
            Resource:
              - !Ref OpenOnDemandSecrets
              - !If [ UseSlurmAccountingDB, !Ref SlurmAccountingDBSecret, !Ref AWS::NoValue ]
              - !If [ UseSlurmAccountingDB, !Ref SlurmAccountingDBSecretPassword, !Ref AWS::NoValue ]
              - !Ref ADAdministratorSecret
              - !If [ CreateMungeKey, !Ref MungeKeySecret, !Ref AWS::NoValue ]
          - Effect: Allow
            Action:
              - s3:GetObject
              - s3:PutObject
              - s3:ListBucket
            Resource:
              - !GetAtt ClusterConfigBucket.Arn
              - !Sub ${ClusterConfigBucket.Arn}/*
          - Effect: Allow
            Action:
              - elasticfilesystem:ClientMount
              - elasticfilesystem:ClientWrite
              - elasticfilesystem:ClientRootAccess
            Resource:
              - !If [ CreateEFSFileSystem, !GetAtt SharedFileSystem.Arn, !Ref EFSFileSystemArn ]
          - Effect: Allow
            Action:
              - cloudformation:Describe*
              - cloudformation:List*
            Resource:
              - !Ref AWS::StackId
          - Effect: Allow
            Action:
              - kms:Decrypt
              - kms:DescribeKey
            Resource: "*"

  ParallelClusterWorkerNodeIAMPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - elasticfilesystem:ClientMount
              - elasticfilesystem:ClientWrite
              - elasticfilesystem:ClientRootAccess
            Resource:
              - !If [ CreateEFSFileSystem, !GetAtt SharedFileSystem.Arn, !Ref EFSFileSystemArn ]
          - Effect: Allow
            Action:
              - cloudformation:Describe* # TODO: Scope down
              - cloudformation:List* # TODO: Scope down
            Resource:
              - !Ref AWS::StackId
          - Effect: Allow
            Action:
              - s3:GetObject
              - s3:PutObject
              - s3:ListBucket
            Resource:
              - !GetAtt ClusterConfigBucket.Arn
              - !Sub ${ClusterConfigBucket.Arn}/*
          - Effect: Allow
            Action:
              - kms:Decrypt
              - kms:DescribeKey
            Resource: "*"

#######################
#     Outputs         #
#######################

Outputs:
  URL:
    Description: Open OnDemand URL
    Value:
      !If
        - HasWebsiteDomain
        - !Sub "https://${WebsiteDomainName}"
        - !Sub "http://${ALB.DNSName}"
  ClusterConfigBucket:
    Description: S3 Bucket where Cluster Configuration items are stored
    Value: !Ref ClusterConfigBucket
  SecretId:
    Description: Open OnDemand Secret ID
    Value: !Ref OpenOnDemandSecrets
  SlurmAccountingDBSecret:
    Description: DB Secret ARN
    Value: !Ref SlurmAccountingDBSecret
  SlurmAccountingDBSecretPassword:
    Description: (Optional) Slurm Accounting DB Secret Password.
    Value: !Ref SlurmAccountingDBSecretPassword
  LDAPNLBEndPoint:
    Description: LDAP NLB End Point
    Value: !Ref LDAPNLBEndPoint
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
  PrivateSubnets:
    Description: Private Subnets
    Value: !Join [",", !Ref PrivateSubnets]
  ADAdministratorSecretARN:
    Description: DB Secret ARN
    Value: !Ref ADAdministratorSecret
  MungeKeySecretId:
    Description: Munge Key Secret ARN
    Value: !If [ CreateMungeKey, !Ref MungeKeySecret, !Ref MungeKeySecretArn ]
  EFSMountId:
    Description: EFS Mount ID
    Value: !If [ CreateEFSFileSystem, !Ref SharedFileSystem, !Ref EFSFileSystemId ]
  EFSFileSystemArn:
    Description: EFS File System ARN
    Value: !If [ CreateEFSFileSystem, !GetAtt SharedFileSystem.Arn, !Ref EFSFileSystemArn ]
  EfsClientSecurityGroup:
    Description: EFS Client Security Group
    Value: !Ref EfsClientSecurityGroup
  HeadNodeIAMPolicyArn:
    Description: Parallel Cluster Head Node IAM ARN
    Value: !Ref HeadNodeParallelClusterIAMPolicy
  ComputeNodeIAMPolicyArn:
    Description: Parallel Cluster Worker Node IAM ARN
    Value: !Ref ParallelClusterWorkerNodeIAMPolicy
  HeadNodeSecurityGroup:
    Description: Additional Security Group for Parallel Cluster Head Nodes
    Value: !Ref HeadNodeSecurityGroup
  ComputeNodeSecurityGroup:
    Description: Additional Security Group for Parallel Cluster Compute Nodes
    Value: !Ref ComputeNodeSecurityGroup
